fix calendar partially not visible

--- a/src/components/Filterbar/css/Filterbar.css
+++ b/src/components/Filterbar/css/Filterbar.css
@@ -12,7 +12,7 @@
   box-shadow: 0px 3px 6px #00000029;
   border-radius: 20px;
   opacity: 1;
-  overflow-x: hidden;
+  overflow-x: visible;
   /* transition: all 1000ms ease; */
 }
 
